syntax = "proto3";

package controlplane;

option go_package = "github.com/zhinea/sylix/internal/infra/proto/controlplane";

import "common/validation.proto";
import "common/common.proto";

service ServerService {
    rpc Create(Server) returns (ServerResponse);
    rpc Get(Id) returns (ServerResponse);
    rpc All(common.Empty) returns (ServersResponse);
    rpc Update(Server) returns (ServerResponse);
    rpc Delete(Id) returns (MessageResponse);
    rpc RetryConnection(Id) returns (ServerResponse);
    rpc InstallAgent(Id) returns (MessageResponse);
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
    rpc GetAccidents(GetAccidentsRequest) returns (GetAccidentsResponse);
}

message GetStatsRequest {
    string server_id = 1;
}

message ServerStat {
    string id = 1;
    string server_id = 2;
    double average_response_time = 3;
    int64 min_response_time = 4;
    int64 max_response_time = 5;
    int64 ping_count = 6;
    double success_rate = 7;
    string timestamp = 8;
}

message GetStatsResponse {
    repeated ServerStat stats = 1;
}

message GetAccidentsRequest {
    string server_id = 1;
}

message ServerAccident {
    string id = 1;
    string server_id = 2;
    int64 response_time = 3;
    string error = 4;
    string details = 5;
    bool resolved = 6;
    string created_at = 7;
}

message GetAccidentsResponse {
    repeated ServerAccident accidents = 1;
}

enum StatusCode {
    UNSPECIFIED = 0;
    OK = 200;
    CREATED = 201;
    NOT_FOUND = 404;
    INTERNAL_ERROR = 500;
    BAD_REQUEST = 400;
    VALIDATION_FAILED = 402;
}

// Status dimana hanya untuk koneksi ke server, apakah koneksi berhasil atau tidak
enum StatusServer {
    STATUS_SERVER_UNSPECIFIED = 0;
    CONNECTED = 1;
    DISCONNECTED = 2;
}

enum AgentStatusServer {
    AGENT_STATUS_SERVER_UNSPECIFIED = 0;
    INSTALLING = 1;
    CONFIGURING = 2;
    FINALIZING_SETUP = 3;
    SUCCESS = 4;
    FAILED = 5;
}

message Id {
    string id = 1;
}

message ServerResponse {
    StatusCode status = 1;
    Server server = 2;
    repeated common.ValidationError errors = 3;
    optional string error = 4; 
}

message ServersResponse {
    StatusCode status = 1;
    repeated Server servers = 2;
    repeated common.ValidationError errors = 3;
    optional string error = 4; 
}

message Server {
    string id = 1;
    string name = 2;
    string ipAddress = 3;
    int32 port = 4;
    string protocol = 5;
    ServerCredential credential = 6;
    int32 isRoot = 7;
    StatusServer status = 8;
    AgentStatusServer agentStatus = 9;
    string agentLogs = 10;
}

message ServerCredential {
    string username = 1;
    optional string password = 2;
    optional string sshKey = 3;
}

message MessageResponse {
    StatusCode status = 1;
    string message = 2;
}
